test/files/neg/inlineIndyLambdaPrivate/Test_2.scala
// scalac: -opt:l:inline -opt-inline-from:** -Yopt-inline-heuristics:everything -opt-warnings:_ -Xfatal-warnings
class Test {
  def foo = A_1.test
}
